# curses-gfx

./: CMakeLists.txt  Makefile  README.md
cmake/Modules/: FindBULLET.cmake  FindLibAssimp.cmake  FindSDL2.cmake
docs/: Chamfered_dodecahedron.stl
examples/: bullet.cpp  cube.cpp  cube3.cpp  cubepng.cpp  deferred.cpp  fileLoader.cpp  game.cpp  testFill.cpp  threadPoolCheck.cpp
helpers/: allAsciiCharacters.cpp  asciiToLut.cpp
include/: curses-gfx-3d.h  curses-gfx-handler.h  curses-gfx-loader.h  curses-gfx-physics.h  curses-gfx-png-loader.h  curses-gfx-resources.h.in  curses-gfx-texture.h  curses-gfx-types.h  curses-gfx.h
resources/: README.md  capsule.dae  color-cube.dae  ground.dae  icosphere.dae  unit-cube.stl  unit-sphere-low-poly.dae  unit-sphere.dae  unit-sphere.stl
resources/mario/source/Mario/: Mario.mtl
resources/super-mario-bros-level-1-1/source/supermariobros11/: lowerPoly.fbx  supermariobros11.fbx
src/: aviz.cpp  chaosClocks.cpp  cube.cpp  cube2.cpp  cube3.cpp  cubepng.cpp  cursesClock.cpp  cursesGfx-drawPolygon.cpp  cursesGfx-set.cpp  cursesGfx.cpp  cursesGfx3d.cpp  cursesGfxHandler.cpp  cursesGfxLoader.cpp  cursesGfxPhysics.cpp  cursesGfxPngLoader.cpp  cursesGfxRenderPipeline.cpp  cursesGfxTerminal.cpp  cursesGfxTexture.cpp  cursesGfxThreadpool.cpp  cursesGfxTypes.cpp  fileLoader.cpp  stopwatch.cpp  test3D.cpp  testAsciiLines.cpp  testColor.cpp  testFill.cpp  threadPoolCheck.cpp
